Documentation of AppManager

--- a/Doxygen Documentation/latex/AppManager_8cs.tex
+++ b/Doxygen Documentation/latex/AppManager_8cs.tex
@@ -4,7 +4,7 @@
 \begin{DoxyCompactItemize}
 \item 
 class \mbox{\hyperlink{classThoughts_1_1AppManager}{Thoughts.\+App\+Manager}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current \char`\"{}\+Game\+Manager\char`\"{}. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Namespaces}
 \begin{DoxyCompactItemize}
 \item 
