--- a/Doxygen Documentation/latex/annotated.tex
+++ b/Doxygen Documentation/latex/annotated.tex
@@ -1,6 +1,6 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{classThoughts_1_1AppManager}{Thoughts.\+App\+Manager}} }{\pageref{classThoughts_1_1AppManager}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classThoughts_1_1AppManager}{Thoughts.\+App\+Manager}} \\*Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current \char`\"{}\+Game\+Manager\char`\"{} }{\pageref{classThoughts_1_1AppManager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classThoughts_1_1ControlSystems_1_1CameraController}{Thoughts.\+Control\+Systems.\+Camera\+Controller}} }{\pageref{classThoughts_1_1ControlSystems_1_1CameraController}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classThoughts_1_1ControlSystems_1_1ControlSystem}{Thoughts.\+Control\+Systems.\+Control\+System}} }{\pageref{classThoughts_1_1ControlSystems_1_1ControlSystem}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classThoughts_1_1ControlSystems_1_1InputHandler}{Thoughts.\+Control\+Systems.\+Input\+Handler}} }{\pageref{classThoughts_1_1ControlSystems_1_1InputHandler}}{}
