--- a/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1CameraController.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1CameraController.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Control\+Systems.\+Camera\+Controller\+:\nopa
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Control\+Systems.\+Camera\+Controller\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Control\+Systems.\+Camera\+Controller\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
