--- a/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1InputHandler.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1InputHandler.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Control\+Systems.\+Input\+Handler\+:\nopagebr
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Control\+Systems.\+Input\+Handler\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Control\+Systems.\+Input\+Handler\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
