--- a/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1UI_1_1GameUIManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1UI_1_1GameUIManager.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Control\+Systems.\+UI.\+Game\+UIManager\+:\no
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Control\+Systems.\+UI.\+Game\+UIManager\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Control\+Systems.\+UI.\+Game\+UIManager\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
