--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeManager.tex
@@ -110,8 +110,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 66 of file Attribute\+Manager.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -135,16 +134,14 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 124 of file Attribute\+Manager.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1Attributes_1_1AttributeManager_a62b14929d230580f06775369b1844334_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -171,8 +168,7 @@ Definition at line 111 of file Attribute\+Manager.\+cs.
 
 Definition at line 20 of file Attribute\+Manager.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -206,8 +202,7 @@ Definition at line 27 of file Attribute\+Manager.\+cs.
 
 Definition at line 49 of file Attribute\+Manager.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
