--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeUpdate.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeUpdate.tex
@@ -2,8 +2,7 @@
 \label{classThoughts_1_1Game_1_1Attributes_1_1AttributeUpdate}\index{Thoughts.Game.Attributes.AttributeUpdate@{Thoughts.Game.Attributes.AttributeUpdate}}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Attributes.\+Attribute\+Update\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Attributes.\+Attribute\+Update\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
