--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1OwnedAttribute.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1OwnedAttribute.tex
@@ -2,8 +2,7 @@
 \label{classThoughts_1_1Game_1_1Attributes_1_1OwnedAttribute}\index{Thoughts.Game.Attributes.OwnedAttribute@{Thoughts.Game.Attributes.OwnedAttribute}}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Attributes.\+Owned\+Attribute\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Attributes.\+Owned\+Attribute\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -77,8 +76,7 @@ Definition at line 28 of file Owned\+Attribute.\+cs.
 
 Definition at line 41 of file Owned\+Attribute.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -105,8 +103,7 @@ Definition at line 36 of file Owned\+Attribute.\+cs.
 
 Definition at line 18 of file Owned\+Attribute.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -123,8 +120,7 @@ Here is the caller graph for this function\+:
 
 Definition at line 23 of file Owned\+Attribute.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
