--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
@@ -73,8 +73,7 @@ Look for all Map\+Events that, as consequence of the event, they make the attrib
 
 Definition at line 40 of file Game\+Manager.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
