--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan.tex
@@ -2,8 +2,7 @@
 \label{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan}\index{Thoughts.Game.GameMap.ExecutionPlan@{Thoughts.Game.GameMap.ExecutionPlan}}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Execution\+Plan\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Execution\+Plan\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -80,8 +79,7 @@ Definition at line 30 of file Execution\+Plan.\+cs.
 
 Definition at line 89 of file Execution\+Plan.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -98,16 +96,14 @@ Here is the caller graph for this function\+:
 
 Definition at line 64 of file Execution\+Plan.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan_a27d2f83684ef90bc1645b6452dbe15d4_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -131,16 +127,14 @@ If possible, executes the
 
 Definition at line 48 of file Execution\+Plan.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan_a6154817d2838590e1f5bfa892bba3e92_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -157,16 +151,14 @@ Here is the caller graph for this function\+:
 
 Definition at line 138 of file Execution\+Plan.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan_addee670e736bf63848867b90462f8d50_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -183,16 +175,14 @@ Here is the caller graph for this function\+:
 
 Definition at line 84 of file Execution\+Plan.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan_a7804174682edfe2b40290abb5c4c87c9_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -209,16 +199,14 @@ Here is the caller graph for this function\+:
 
 Definition at line 79 of file Execution\+Plan.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan_a239c4bf3075212ec2a5af3f908762446_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
