--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Map.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Map.tex
@@ -156,8 +156,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 118 of file Map.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
