--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapElement.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapElement.tex
@@ -2,8 +2,7 @@
 \label{classThoughts_1_1Game_1_1GameMap_1_1MapElement}\index{Thoughts.Game.GameMap.MapElement@{Thoughts.Game.GameMap.MapElement}}
 
 
-Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+Element\+:
-\nopagebreak
+Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+Element\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+Element\+:
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+Element\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+Element\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -81,8 +79,7 @@ Definition at line 12 of file Map\+Element.\+cs.
 
 Definition at line 32 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -99,8 +96,7 @@ Here is the call graph for this function\+:
 
 Definition at line 55 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -124,8 +120,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 131 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -149,8 +144,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 20 of file Map\+Element.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -194,8 +188,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 107 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
