--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Mob.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Mob.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Mob\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Mob\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Mob\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -82,8 +81,7 @@ Definition at line 5 of file Mob.\+cs.
 
 Definition at line 32 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -100,8 +98,7 @@ Here is the call graph for this function\+:
 
 Definition at line 55 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -125,8 +122,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 131 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -150,8 +146,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 20 of file Map\+Element.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -195,8 +190,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 107 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
