--- a/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1Manual.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1Manual.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Control\+Systems.\+Manual\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Control\+Systems.\+Manual\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Control\+Systems.\+Manual\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
