--- a/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1UI_1_1UIPovManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1ControlSystems_1_1UI_1_1UIPovManager.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Thoughts.\+Control\+Systems.\+UI.\+UIPov\+Manager\+:\nop
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Control\+Systems.\+UI.\+UIPov\+Manager\+:
-\nopagebreak
+Collaboration diagram for Thoughts.\+Control\+Systems.\+UI.\+UIPov\+Manager\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
