--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapEvent.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapEvent.tex
@@ -59,8 +59,7 @@ Definition at line 10 of file Map\+Event.\+cs.
 
 Definition at line 127 of file Map\+Event.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -77,8 +76,7 @@ Here is the caller graph for this function\+:
 
 Definition at line 22 of file Map\+Event.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -95,8 +93,7 @@ Here is the caller graph for this function\+:
 
 Definition at line 69 of file Map\+Event.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -113,8 +110,7 @@ Here is the caller graph for this function\+:
 
 Definition at line 50 of file Map\+Event.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
