--- a/Doxygen Documentation/latex/namespaceThoughts.tex
+++ b/Doxygen Documentation/latex/namespaceThoughts.tex
@@ -11,4 +11,4 @@ namespace \mbox{\hyperlink{namespaceThoughts_1_1Game}{Game}}
 \begin{DoxyCompactItemize}
 \item 
 class \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current \char`\"{}\+Game\+Manager\char`\"{}. \end{DoxyCompactList}\end{DoxyCompactItemize}
