--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
@@ -11,11 +11,12 @@ Inheritance diagram for Thoughts.\+Game.\+Game\+Manager\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Manager\+:\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Manager\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=280pt]{classThoughts_1_1Game_1_1GameManager__coll__graph}
+\includegraphics[width=348pt]{classThoughts_1_1Game_1_1GameManager__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
@@ -28,7 +29,7 @@ List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan}{Exec
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Game\+Map.\+Map}} \mbox{\hyperlink{classThoughts_1_1Game_1_1GameManager_adc4790d7a6afa795f2b7d9a52d143f28}{map}}
+\mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Map}} \mbox{\hyperlink{classThoughts_1_1Game_1_1GameManager_a4383320509b838c2cccb0d318b70a8ba}{map}}
 \end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
@@ -117,11 +118,11 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Definition at line 14 of file Game\+Manager.\+cs.
 
-\mbox{\Hypertarget{classThoughts_1_1Game_1_1GameManager_adc4790d7a6afa795f2b7d9a52d143f28}\label{classThoughts_1_1Game_1_1GameManager_adc4790d7a6afa795f2b7d9a52d143f28}} 
+\mbox{\Hypertarget{classThoughts_1_1Game_1_1GameManager_a4383320509b838c2cccb0d318b70a8ba}\label{classThoughts_1_1Game_1_1GameManager_a4383320509b838c2cccb0d318b70a8ba}} 
 \index{Thoughts.Game.GameManager@{Thoughts.Game.GameManager}!map@{map}}
 \index{map@{map}!Thoughts.Game.GameManager@{Thoughts.Game.GameManager}}
 \doxysubsubsection{\texorpdfstring{map}{map}}
-{\footnotesize\ttfamily \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Game\+Map.\+Map}} Thoughts.\+Game.\+Game\+Manager.\+map}
+{\footnotesize\ttfamily \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Map}} Thoughts.\+Game.\+Game\+Manager.\+map}
 
 
 
